FIX: z-indexes for meny, club etc

--- a/style.css
+++ b/style.css
@@ -528,7 +528,7 @@ section.home {
     right: var(--bodyPadding);
     width: 280px;
     max-width: 100%;
-    z-index: -100;
+    z-index: 100;
     /* overflow-y: visible; */
 }
 
@@ -1029,7 +1029,7 @@ input[type=submit]:hover {
 }
 
 
-/* ----------> MENU BUTTONS <---------- */
+/* -> MENU BUTTONS <---------- */
 
 .menu__btns-wrapper {
     grid-column: 5;
@@ -1039,7 +1039,7 @@ input[type=submit]:hover {
     flex-direction: column;
     gap: var(--bodyPadding);
     padding-bottom: var(--bodyPadding);
-    z-index: 1000;
+    /* z-index: 1000; */
     pointer-events: none;
 }
 
@@ -1054,7 +1054,7 @@ input[type=submit]:hover {
     font-family: var(--fontTypewriter);
     font-variation-settings: "wght" 600;
     transition: all .15s ease-in-out;
-    z-index: 1000;
+    /* z-index: 1000; */
     pointer-events: all;
 }
 
